Changes in version 0.5.0 (unreleased)
==============================================

* Switched from Glade to GtkBuilder.  This fixes those strange theme problems
  GTimeLog had with Ubuntu's Radiance and especially Ambiance. (LP: #644393)

  Packagers note: src/gtimelog/gtimelog.glade is gone, it was replaced by
  src/gtimelog/gtimelog.ui.  It needs to be installed into
  /usr/share/gtimelog/.

* GTimeLog now supports Ubuntu's application indicators.  There's a new
  configuration option, ``prefer_app_indicator``, defaulting to true.
  Fixes LP: #523461.

* GTimeLog tries to detect your theme color and make the tray icon dark or
  bright, for good contrast.  This is a hack that doesn't work reliably, but
  is better than nothing.  Fixes LP: #700428.

  Packagers note: there's a new icon file,
  src/gtimelog/gtimelog-small-bright.png.  It needs to be installed into
  /usr/share/gtimelog/.

* Made GTimeLog a single instance application.  Requires python-dbus.
  The following command line options are supported::

    gtimelog --ignore-dbus
        always launch a new application instance, do not start the DBus service

    gtimelog --toggle
        if GtimeLog already running, show or hide the GTimeLog window,
        otherwise launch a new application instance

    gtimelog
        if GtimeLog already running, bring the GTimeLog window to the front,
        otherwise launch a new application instance

  Contributed by Bruce van der Kooij (https://launchpad.net/~brucevdk),
  Fixes LP: #356495.

* New option: start_in_tray.  Defaults to false.  Contributed by Bruce van der
  Kooij (https://launchpad.net/~brucevdk), as part of his patch for LP:
  #356495.

* New command-line option: --tray.  Makes GTimeLog start minimized, or exit
  without doing anything if it's already running.

* Added some documentation for contributors: HACKING.txt.

* Daily reports include totals by category.  Contributed by Laurynas Speičys
  <laurynas@pov.lt>.
