@@ -8,6 +8,12 @@ Changes in version 0.5.0 (unreleased)
   src/gtimelog/gtimelog.ui.  It needs to be installed into
   /usr/share/gtimelog/.
 
+* Ported from PyGTK to GI. This supports GTK 2 and GTK 3 now.
+
+  Packager's note: you need to change the package's dependencies from pygtk to
+  the package that provides the GTK and Pango typelibs (e. g. gir1.2-gtk-2.0
+  and gir1.2-pango-1.0 on Debian/Ubuntu). It also requires pygobject >= 2.27.1.
+
 * GTimeLog now supports Ubuntu's application indicators.  There's a new
   configuration option, ``prefer_app_indicator``, defaulting to true.
   Fixes LP: #523461.
